--- a/index.html
+++ b/index.html
@@ -11,13 +11,91 @@
     </head>
     <body>
         <header>
-
+            <div class="logo">Header Logo</div>
+            <nav>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-
+            <section class="one">
+                <div class="desc-container">
+                    <div class="desc">
+                        <h1>This website is awesome</h1>
+                        <p>
+                            This website has some subtext that goes here under the main title. 
+                            It's a smaller font and the color is lower contrast.
+                        </p>
+                        <button class="sign-up">Sign Up</button>
+                    </div>
+                    <div class="desc-img">
+                        <img src="https://via.placeholder.com/500x250" alt="placeholder">
+                    </div>
+                </div>
+            </section>
+            <section class="two">
+                <h2>Some random information.</h2>
+                <div class="random-container">
+                    <div class="random">
+                        <div class="random-img">
+                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                        </div>
+                        <div class="random-caption">
+                            this is some text under an illustration or image
+                        </div>
+                    </div>
+                    <div class="random">
+                        <div class="random-img">
+                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                        </div>
+                        <div class="random-caption">
+                            this is some text under an illustration or image
+                        </div>
+                    </div>
+                    <div class="random">
+                        <div class="random-img">
+                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                        </div>
+                        <div class="random-caption">
+                            this is some text under an illustration or image
+                        </div>
+                    </div>
+                    <div class="random">
+                        <div class="random-img">
+                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                        </div>
+                        <div class="random-caption">
+                            this is some text under an illustration or image
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="three">
+                <div class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
+                    or maybe people will actually read it. Who knows? All I know is that it looks nice. 
+                </div>
+                <div class="citation">
+                    -Thor, God of Thunder
+                </div>
+            </section>
+            <section class="four">
+                <div class="action-container">
+                    <div class="action-text">
+                        <h3>Call to action! It's time!</h3>
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                    <div class="button-container">
+                        <button class="action-button">Sign up</button>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
-            
+            Copyright © The Odin Project 2021
         </footer>
     </body>
 </html>
