--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </header>
         <main>
             <section class="one">
-                <div class="desc-container">
-                    <div class="desc">
+                <div class="hero-container">
+                    <div class="hero">
                         <h1>This website is awesome</h1>
                         <p>
                             This website has some subtext that goes here under the main title. 
@@ -31,7 +31,7 @@
                         </p>
                         <button class="sign-up">Sign Up</button>
                     </div>
-                    <div class="desc-img">
+                    <div class="hero-img">
                         <img src="https://via.placeholder.com/500x250" alt="placeholder">
                     </div>
                 </div>
