added quote section styling

--- a/index.html
+++ b/index.html
@@ -41,34 +41,34 @@
                 <div class="random-container">
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                            <img src="https://via.placeholder.com/175" alt="placeholder">
                         </div>
                         <div class="random-caption">
-                            this is some text under an illustration or image
+                            this is some subtext under an illustration or image
                         </div>
                     </div>
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                            <img src="https://via.placeholder.com/175" alt="placeholder">
                         </div>
                         <div class="random-caption">
-                            this is some text under an illustration or image
+                            this is some subtext under an illustration or image
                         </div>
                     </div>
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                            <img src="https://via.placeholder.com/175" alt="placeholder">
                         </div>
-                        <div class="random-caption">
-                            this is some text under an illustration or image
+                        <div class="random-subtext">
+                            this is some subtext under an illustration or image
                         </div>
                     </div>
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/150" alt="placeholder">
+                            <img src="https://via.placeholder.com/175" alt="placeholder">
                         </div>
                         <div class="random-caption">
-                            this is some text under an illustration or image
+                            this is some subtext under an illustration or image
                         </div>
                     </div>
                 </div>
