added action button section styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             This website has some subtext that goes here under the main title. 
                             It's a smaller font and the color is lower contrast.
                         </p>
-                        <button class="sign-up">Sign Up</button>
+                        <button class="sign-up">Sign up</button>
                     </div>
                     <div class="hero-img">
                         <img src="https://via.placeholder.com/525x250" alt="placeholder">
