--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png"> -->
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
         <link rel="stylesheet" href="index.css">
         
         <title>Landing Page</title>
@@ -32,7 +32,7 @@
                         <button class="sign-up">Sign up</button>
                     </div>
                     <div class="hero-img">
-                        <img src="https://via.placeholder.com/525x250" alt="placeholder">
+                        <img src="./images/bakery.jpg" alt="Bakery display">
                     </div>
                 </div>
             </section>
@@ -41,7 +41,7 @@
                 <div class="random-container">
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/175" alt="placeholder">
+                            <img src="./images/croissant.jpg" alt="A croissant with a strawberry slice on top">
                         </div>
                         <div class="random-caption">
                             this is some subtext under an illustration or image
@@ -49,7 +49,7 @@
                     </div>
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/175" alt="placeholder">
+                            <img src="./images/challah.jpg" alt="Challah bread">
                         </div>
                         <div class="random-caption">
                             this is some subtext under an illustration or image
@@ -57,7 +57,7 @@
                     </div>
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/175" alt="placeholder">
+                            <img src="./images/loaf.jpg" alt="A loaf of bread">
                         </div>
                         <div class="random-subtext">
                             this is some subtext under an illustration or image
@@ -65,7 +65,7 @@
                     </div>
                     <div class="random">
                         <div class="random-img">
-                            <img src="https://via.placeholder.com/175" alt="placeholder">
+                            <img src="./images/toast.jpg" alt="Piece of buttered toast">
                         </div>
                         <div class="random-caption">
                             this is some subtext under an illustration or image
