replaced text content with song lyrics

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
         <link rel="stylesheet" href="index.css">
         
-        <title>Landing Page</title>
+        <title>What Baking Can Do</title>
     </head>
     <body>
         <header>
-            <div class="logo">Header Logo</div>
+            <div class="logo">What Baking Can Do</div>
             <nav>
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="#">sugar</a></li>
+                    <li><a href="#">butter</a></li>
+                    <li><a href="#">flour</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,10 +24,10 @@
             <section class="one">
                 <div class="hero-container">
                     <div class="hero">
-                        <h1>This website is awesome</h1>
+                        <h1>It only takes a taste</h1>
                         <p>
-                            This website has some subtext that goes here under the main title. 
-                            It's a smaller font and the color is lower contrast.
+                            Take a breath when you need to be reminded that with days like these,
+                            we can only do the best we can 'til we do it again
                         </p>
                         <button class="sign-up">Sign up</button>
                     </div>
@@ -37,14 +37,14 @@
                 </div>
             </section>
             <section class="two">
-                <h2>Some random information.</h2>
+                <h2>What's inside?</h2>
                 <div class="random-container">
                     <div class="random">
                         <div class="random-img">
                             <img src="./images/croissant.jpg" alt="A croissant with a strawberry slice on top">
                         </div>
                         <div class="random-caption">
-                            this is some subtext under an illustration or image
+                            My hands pluck the things I know that I'll need
                         </div>
                     </div>
                     <div class="random">
@@ -52,7 +52,7 @@
                             <img src="./images/challah.jpg" alt="Challah bread">
                         </div>
                         <div class="random-caption">
-                            this is some subtext under an illustration or image
+                            I'll take the sugar and butter from the pantry
                         </div>
                     </div>
                     <div class="random">
@@ -60,7 +60,7 @@
                             <img src="./images/loaf.jpg" alt="A loaf of bread">
                         </div>
                         <div class="random-subtext">
-                            this is some subtext under an illustration or image
+                            I add the flour to begin what I am hoping to start
                         </div>
                     </div>
                     <div class="random">
@@ -68,25 +68,26 @@
                             <img src="./images/toast.jpg" alt="Piece of buttered toast">
                         </div>
                         <div class="random-caption">
-                            this is some subtext under an illustration or image
+                            And then it's down with the recipe and bake from the heart
                         </div>
                     </div>
                 </div>
             </section>
             <section class="three">
                 <div class="quote">
-                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
-                    or maybe people will actually read it. Who knows? All I know is that it looks nice. 
+                    You wanna know what's inside? I could tell you if I wasn't hiding. 
+                    My whole life is in here in this kitchen, baking. What a mess I'm making!
                 </div>
                 <div class="citation">
-                    -Thor, God of Thunder
+                    -Jenna Hunterson
                 </div>
             </section>
             <section class="four">
                 <div class="action-container">
                     <div class="action-text">
-                        <h3>Call to action! It's time!</h3>
-                        Sign up for our product by clicking that button right over there!
+                        <h3>Sugar, butter, flour: don't let me down!
+                            </h3>
+                        Let's see the next amazing thing baking does now!
                     </div>
                     <div class="button-container">
                         <button class="action-button">Sign up</button>
