changed class name for section two

--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@
             </section>
             <section class="two">
                 <h2>What's inside?</h2>
-                <div class="random-container">
-                    <div class="random">
-                        <div class="random-img">
+                <div class="bread-container">
+                    <div class="bread">
+                        <div class="bread-img">
                             <img src="./images/croissant.jpg" alt="A croissant with a strawberry slice on top">
                         </div>
-                        <div class="random-caption">
+                        <div class="bread-caption">
                             My hands pluck the things I know that I'll need
                         </div>
                     </div>
-                    <div class="random">
-                        <div class="random-img">
+                    <div class="bread">
+                        <div class="bread-img">
                             <img src="./images/challah.jpg" alt="Challah bread">
                         </div>
-                        <div class="random-caption">
+                        <div class="bread-caption">
                             I'll take the sugar and butter from the pantry
                         </div>
                     </div>
-                    <div class="random">
-                        <div class="random-img">
+                    <div class="bread">
+                        <div class="bread-img">
                             <img src="./images/loaf.jpg" alt="A loaf of bread">
                         </div>
-                        <div class="random-subtext">
+                        <div class="bread-subtext">
                             I add the flour to begin what I am hoping to start
                         </div>
                     </div>
-                    <div class="random">
-                        <div class="random-img">
+                    <div class="bread">
+                        <div class="bread-img">
                             <img src="./images/toast.jpg" alt="Piece of buttered toast">
                         </div>
-                        <div class="random-caption">
+                        <div class="bread-caption">
                             And then it's down with the recipe and bake from the heart
                         </div>
                     </div>
